# agentic-assistant

./: .env  .gitignore  loader.py  main.py  pyproject.toml  sample.py
chroma_langchain_db/ec6d6987-a43f-466b-babf-2c070f147542/: index_metadata.pickle
shared/: config_service.py  rag_middlewares.py  vector_store_config.py
